# task-list-api

./: .env.sample  pyproject.toml
taskListAPI/: manage.py  pytest.ini
taskListAPI/apps/user/: models.py  serializers.py
taskListAPI/apps/user/migrations/: 0001_initial.py
taskListAPI/taskListAPI/: asgi.py  settings.py  urls.py  wsgi.py
taskListAPI/tests/user/: test_model.py
tasksAPi/: bruno.json
tasksAPi/auth/: Login.bru  Register.bru  get user info.bru
tasksAPi/environments/: dev.bru
