[tool.poetry]
name = "task-list-api"
version = "0.1.0"
description = ""
authors = ["Joaquin Huaman Pino <jhuaman@evolutionsoluciones.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
psycopg2-binary = "^2.9.9"
pylint = "^3.1.0"
pylint-django = "^2.5.5"
pytest-django = "^4.8.0"
djangorestframework = "^3.15.1"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
